<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openmrs.module</groupId>
    <artifactId>emrapi</artifactId>
    <version>1.4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>EMR API Module</name>
    <description>Higher-level APIs to support building EMR functionality in OpenMRS, to supplement the data-level APIs
        in the OpenMRS core.
    </description>
    <url>https://wiki.openmrs.org/display/docs/EMR+API+Module+Module</url>

    <developers>
        <developer>
            <name>OpenMRS</name>
        </developer>
    </developers>

    <organization>
        <name>OpenMRS</name>
        <url>http://openmrs.org</url>
    </organization>

    <scm>
        <connection>scm:git:https://github.com/openmrs/openmrs-module-emrapi.git</connection>
        <developerConnection>scm:git:https://github.com/openmrs/openmrs-module-emrapi.git</developerConnection>
        <url>https://github.com/openmrs/openmrs-module-emrapi.git</url>
      <tag>HEAD</tag>
  </scm>

    <modules>
        <module>api</module>
        <module>omod</module>
        <module>api-1.10</module>
        <module>api-1.9</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <openmrsTestutilsVersion>1.3</openmrsTestutilsVersion>
        <distro.groupId>org.openmrs.distro</distro.groupId>
        <distro.artifactId>referenceapplication</distro.artifactId>
        <distro.version>2.1-SNAPSHOT</distro.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${distro.groupId}</groupId>
                <artifactId>${distro.artifactId}</artifactId>
                <version>${distro.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>webservices.rest-omod-common</artifactId>
                <version>2.6-SNAPSHOT</version>
                <type>test-jar</type>
            </dependency>
        </dependencies>
    </dependencyManagement> 

    <dependencies>

        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

       <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <type>pom</type>
            <scope>test</scope>
        </dependency> 

        <!-- End OpenMRS core -->

        <!-- Begin OpenMRS modules -->

       <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>org.apache.geronimo.specs</groupId>
            <artifactId>geronimo-jms_1.1_spec</artifactId>
            <version>1.1.1</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency> 

        <!-- End OpenMRS modules -->

        <!-- Begin OpenMRS contrib -->

       <dependency>
            <groupId>org.openmrs.contrib</groupId>
            <artifactId>testutils</artifactId>
            <version>${openmrsTestutilsVersion}</version>
            <scope>test</scope>
        </dependency> 

        <!-- End OpenMRS contrib -->

        <!-- Begin other dependencies -->

        <!-- Needed because the UI Framework module uses HttpSession in its api project -->
        <dependency> 
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency> 

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.2</version>
        </dependency>

        <dependency>
            <groupId>uk.co.modular-it</groupId>
            <artifactId>hamcrest-date</artifactId>
            <version>0.9.3</version>
        </dependency>

        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-core-asl</artifactId>
            <version>1.5.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.5.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- End other dependencies -->

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.6</target>
                        <source>1.6</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules</id>
            <name>OpenMRS Modules</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
